changed tag, was buiding on local builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -258,7 +258,7 @@ else()
     FetchContent_Declare(
         gramarye_clay_ui
         GIT_REPOSITORY "https://github.com/noahspoling/gramarye-clay-ui.git"
-        GIT_TAG "main"
+        GIT_TAG "master"
         GIT_PROGRESS TRUE
         GIT_SHALLOW TRUE
     )
